# teia-trust-network

plan/: references.md  trust-signals.md  v1.md  v2.md  v3-claude-notes.md  v3.md  v4-raptor-mvp.md  v4-raptor-notes.md  v4.md
plan/deep-research/: tezos-indexing-storage-optimization-tallinn.md
prototypes/mvp1/teia-trust-mvp1/: PROJECT_STATUS.md  README.md  check_indexer_progress.py  database.py  debug_trace.py  indexer.py  main.py  pyproject.toml  trust_engine.py  viz.html
prototypes/mvp2/teia-trust-mvp2/: README.md  database.py  engine.py  main.py  pyproject.toml  setup_db.sql  trust_graph.py  viz-force.html  viz.html
prototypes/teia_indexer/: PROJECT_STATUS.md  README.md  index_monitor.py  metadata_worker.py  pyproject.toml  teia_indexer.py
prototypes/teia_indexer_dipdup/: PROJECT.md  PROJECT_TECHNICAL.md  debug_schema.py  debug_schema_out.txt  main.py  pyproject.toml  schema_sniffer.py  schema_sniffer_out.txt
prototypes/teia_indexer_dipdup/handlers/: on_collect.py
prototypes/teia_indexer_dipdup/teia_ecosystem_indexer/: .dockerignore  .env.example  .gitignore  Makefile  README.md  bench_report-1770009183.json  bench_report-1770009637.json  dipdup.yaml  pyproject.toml  utils.py
prototypes/teia_indexer_dipdup/teia_ecosystem_indexer/configs/: dipdup.compose.yaml  dipdup.sqlite.yaml  dipdup.swarm.yaml  replay.yaml
prototypes/teia_indexer_dipdup/teia_ecosystem_indexer/deploy/: Dockerfile  compose.mcp.yaml  compose.sqlite.yaml  compose.swarm.yaml  compose.yaml
prototypes/teia_indexer_dipdup/teia_ecosystem_indexer/handlers/: on_cancel_swap_teia.py  (+16 more)
(+37 files in other folders)
