[project]
name = "teia-trust-mvp2"
version = "0.1.0"
description = "Teia Trust Network MVP2 - PostgreSQL Optimized"
dependencies = [
    "fastapi",
    "uvicorn",
    "asyncpg",
    "rustworkx==0.17.1",
    "pydantic",
    "python-dotenv",
    "scipy",
    "numpy",
    "pytest",
]

[tool.uv]
managed = true
